fix state button on mobile

--- a/electionnight/staticapp/src/scss/_sticky-nav.scss
+++ b/electionnight/staticapp/src/scss/_sticky-nav.scss
@@ -75,6 +75,7 @@
       background-color: #fff;
       border: 1px solid #ccc;
       box-shadow: 0 1px 3px rgba(0,0,0,0.10), 0 1px 2px rgba(0,0,0,0.18);
+      padding: 6px;
 
       transition: all .2s;
       svg{
